fix #10033, fix #15748, fix #17097 - drop remote control https support
Rationale: all modern browsers (including next version of Safari) allow mixed-content to localhost.

Cross-platform / cross-browser HTTPS support is a pain to maintain, was never completed, and is no longer needed.

git-svn-id: https://josm.openstreetmap.de/svn/trunk@15469 0c6e7542-c601-0410-84e7-c038aed88b3b